--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/kroonfilip/testing-with-jest/issues"
   },
-  "homepage": "https://github.com/kroonfilip/testing-with-jest#readme"
+  "homepage": "https://github.com/kroonfilip/testing-with-jest#readme",
+  "dependencies": {
+    "underscore": "^1.13.3"
+  }
 }
