--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/kroonfilip/testing-with-jest#readme",
   "dependencies": {
+    "geckodriver": "^3.0.1",
+    "selenium-webdriver": "^4.1.2",
     "underscore": "^1.13.3"
   },
   "devDependencies": {
+    "jest": "^28.0.3",
+    "jest-circus": "^28.0.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
