--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "underscore": "^1.13.3"
   },
   "devDependencies": {
+    "jasmine": "^4.1.0",
     "jest": "^28.0.3",
-    "jest-circus": "^28.0.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
